# Tetris

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Tetris  cmake_install.cmake  compile_commands.json
include/: Colors.hpp  Fonts.hpp  Images.hpp  SdlInit.hpp  Sprites.hpp  Start.hpp  StartScreen.hpp
include/abs/: IDraw.hpp  Screen.hpp
include/components/: Button.hpp
libraries /SDL2/: SDL_config.h  SDL_main.h
src/: Colors.cpp  Fonts.cpp  Images.cpp  SdlInit.cpp  Sprites.cpp  Start.cpp  StartScreen.cpp  main.cpp
src/abs/: IDraw.cpp  Screen.cpp
src/components/: Button.cpp
